public/css/style.css
/* blue: #66d9ef  rgb(102, 217, 239)
green: #45c468  rgb(69, 196, 104)
pink: #ff79c6  	rgb(255, 121, 198)
purple:  #bd93f9  	rgb(189, 147, 249)
bg: #282a36  	rgb(40, 42, 54) */

body {
  background-color: black;
  /* background-image: url('../images/sketch-still.gif');
  background-repeat: repeat;
  background-attachment: fixed; */
  color: #999999;
}

h1 {
  font-size: 8em;
  font-weight: bolder;
  color: white;
  padding: 0;
  margin-left: -10px;
}

h2 {
  color: #999999;
  font-size: 1.8em;
  font-weight: bold;
  margin-bottom: 8px;
  letter-spacing: 1em;
  /* top | right | bottom | left */
  padding: 20px 0 0 0;
}

h3 {
  color: #ff79c6;
  font-size: 1.1em;
  letter-spacing: .9em;
  padding-top: 20px;
}

h4{
  margin-top: 30px;
  margin-bottom: 12px;
  font-weight: bold;
  letter-spacing: .4em;
}

.glitch {
  padding: 30px 30px 30px 0;
}

.container {
  background-color: black;
}

.artist-pic {
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border-radius: 50%;
  /* top | right | bottom | left */
  margin: 20px 0 20px 0;
}

form {
  font-size: .95em;
  padding-top: 25px;
  color: #999999;
}

.form-control {
  background-color: #282a36;
  border: 0;
}

.form-control::after {
  background-color: #282a36;
  border: 0;
  color: white;
}

#email:focus {
  color: #000;
  background-color: #66d9ef;
  border-color: #66d9ef;
  font-weight: bold;
  outline: none;
}


#email {
  background-color: #282a36;
  border: 0;
  color: white;
}

.btn {
  background-color: #282a36;
  border: 0;
  color: #999999;;
}

ul{
  margin-bottom: 12px;
  list-style-type: none;
  padding-left: 0;
  letter-spacing: .1em;
}

ul a{
  letter-spacing: .4em;
}

#songkickimg{
  margin-bottom: 5px;
  background-color: black;
  border-style: solid;
  border-color: black;
  border-width:13px;
}


footer {
  color: #999999;
  font-size: .85em;
  /* top | right | bottom | left */
  padding: 0 0 40px 0;
}

/* unvisited link */
a:link {
    color: #bd93f9;
    -webkit-transition: all 2s ease;
    -moz-transition: all 2s ease;
    -ms-transition: all 2s ease;
    -o-transition: all 2s ease;
    transition: all 2s ease;
}

/* visited link */
a:visited {
    color: #bd93f9;
}

/* mouse over link */
a:hover {
    text-decoration: none;
    background-color: #66d9ef;
    color: black;
    -webkit-transition: all 0s ease;
    -moz-transition: all 0s ease;
    -ms-transition: all 0s ease;
    -o-transition: all 0s ease;
    transition: all 0s ease;
}

/* selected link */
a:active {
    color: #66d9ef;
    text-decoration: none;
}

